respiration overlapping fix

--- a/respiration/media/css/style.css
+++ b/respiration/media/css/style.css
@@ -128,6 +128,7 @@ div#container
 {
 	margin: 0px 30px;
 	position: relative;
+	min-width: 1000px;
 }
 
 div#left, div#right
